<resources>
    <string name="MessDekho">My Application</string>
    <string-array name="location_array">
        <item>Katora Naka</item>
        <item>Vilas Nagar</item>
        <item>Vidyut Nagar</item>
        <item>Pavon Medical</item>
        <item>Shegaon naka</item>
        <item>Pravin Nagar</item>
        <item>Kolkatta rolls</item>
        <item>Others.....</item>
    </string-array>
    <string name="open">Open</string>

    <string name="close">Close</string>
    <string name="login">Login</string>
    <string name="review_the_app">Review the App</string>
    <string name="contact_us">Contact Us</string>
    <string name="about">About</string>
    <string name="home">Home</string>
    <string name="app_name">MessDekho</string>

</resources>
