<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/Home"
        android:title="@string/home"
        android:icon="@drawable/ic_home_black_24dp"/>
    <item
        android:id="@+id/About"
        android:title="@string/about"
        android:icon="@drawable/ic_home_black_24dp"/>
    <item
        android:id="@+id/Contact"
        android:title="@string/contact_us"
        android:icon="@drawable/ic_home_black_24dp"/>
    <item
        android:id="@+id/appreview"
        android:title="@string/review_the_app"
        android:icon="@drawable/ic_home_black_24dp"/>
    <item
        android:id="@+id/login"
        android:title="@string/login"
        android:icon="@drawable/ic_home_black_24dp"/>
</menu>